--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div id="header">
   <h1>CSC500 at Phillips Academy</h1>
   <p>
-    A <strong>three-term</strong> course in algorithms, object-oriented programming, and data structures, guided by the College Board's AP Computer Science course description.
+    A three-term course in algorithms, object-oriented programming, and data structures, guided by the College Board's AP Computer Science course description.
   </p>
   </div>
 
