--- a/final.html
+++ b/final.html
@@ -98,7 +98,7 @@
   </p>
   <ul>
     <li>
-      <a href="http://codingbat.com/java">Coding Bat</a>: Java Challenges
+      <a href="http://nhl.com/">NHL</a>: NHL
     </li>
     <li>
       <a href="https://projecteuler.net/archives">Project Euler</a>: Challenging algorithmic problems
@@ -117,7 +117,6 @@
     </li>
   </ul>
 
-  <!-- This should go in a "footer" at the bottom of the page.  By the way, this is a comment in HTML. -->
   <p>
     Made with ❤ at Phillips Academy.
   </p>
