--- a/final.html
+++ b/final.html
@@ -7,118 +7,114 @@
     <meta name="description" content="A sample HTML/CSS example website to demonstrate to students what they can build"/>
     <meta name="keywords" content="HTML/CSS, web development, webdev, example website, students" />
     <meta name="robots" content="index,follow" />
+    
+    <style>
+table, th, td {
+    border: 1px solid black;
+}
+</style>
+
 </head>
 
 <body>
   <div id="header">
-  <h1>Mitch Duerr Final Project</h1>
+  <h1>Top Ten NHL Goalies</h1>
+  <h2>2017-2018 season</h2>
   <p>
-    A three-term course in algorithms, object-oriented programming, and data structures, guided by the College Board's AP Computer Science course description.
+    A ranking of the ten best goalies from the 2017-2018 season. 
+    Based on statistics from <a href="https://www.nhl.com">NHL.com</a>
   </p>
   </div>
 
   <div>
-  <h4>Taken from the <a href="http://media.collegeboard.com/digitalServices/pdf/ap/ap-computer-science-a-course-description.pdf">AP CS A Course Description</a></h4>
+  <h3>
+    Number 10: (team) 
+  </h3>
   <p>
-    Computer science embraces problem solving, hardware, algorithms, and perspectives that help people utilize computers to address real-world problems in contemporary life. As the study of computer science is evolving, the careful design of the AP Computer Science A course and exam continues to strive to engage a diverse student population, including female and underrepresented students, with the rigorous and rewarding concepts of computer science. Students who take the AP Computer Science A course and exam are well prepared to continue their study of computer science and its integration into a wide array of computing and STEM-related fields.
-  </p>
-  <p>
-    The AP Computer Science A curriculum provides resources, such as application-related labs, that connect with students with diverse interests, particularly female and underrepresented student populations. The course is engaging and underscores the importance of communicating solutions appropriately and in ways that are relevant to current societal needs. Thus, a well-designed, modern AP Computer Science A course can help address traditional issues of equity, access, and broadening participation in computing while providing a strong and engaging introduction to fundamental areas of the discipline.
-  </p>
-  <p>
-    The AP Computer Science A course introduces students to computer science with fundamental topics that include problem solving, design strategies and methodologies, organization of data (data structures), approaches to processing data (algorithms), analysis of potential solutions, and the ethical and social implications of computing. The course emphasizes both object-oriented and imperative problem solving and design. These techniques represent proven approaches for developing solutions that can scale up from small, simple problems to large, complex problems.
-  </p>
-  <p>
-    The AP Computer Science A course curriculum is compatible with many CS1 courses in colleges and universities. Some colleges and universities may organize their curricula in alternative ways, so that the topics of the AP Computer Science A course are spread over several college courses, with other topics from computer science interspersed.
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
   </p>
   </div>
 
-  <h2>Course Breakdown</h2>
+  <h2>Statistics Breakdown</h2>
   <p>
-    There are three terms at Andover, so we have broken our yearlong course into the three terms below.
+    Leaders are sorted by number of wins.
   </p>
 
-  <h4> Term 1 (Fall)</h4>
-  <ol>
-    <li>
-      Hardware, Software, and the Internet
-    </li>
-    <li>
-      An Introduction to Software Engineering
-    </li>
-    <li>
-      Java Syntax and Style
-    </li>
-    <li>
-      Objects and Classes
-    </li>
-    <li>
-      Data Types, Variables, and Arithmetic
-    </li>
-    <li>
-      Boolean Expressions and <code>if-else</code> Statements
-    </li>
-    <li>
-      Algorithms and Iterations
-    </li>
-  </ol>
+  <h4> Regular season leaders</h4>
+    <table id="regular">
+	<tr>
+		<th>
+		  Name
+		</th>
+		<th>
+		  Team
+		</th>
+		<th>
+		  Goals Against Average (GAA)
+		</th>
+		<th>
+		  Save percentage
+		</th>
+		<th>
+		   Record (GP-Wins-Regulation Losses-OT Losses)
+		</th>
+		<th>
+		  Shoutouts
+		</th>
+	</tr>
+	<tr>
+		<td>
+			test
+		</td>
+		<td>
+			Bruins
+		</td>
+		<td>
+			10
+		</td>
+	</tr>
+  </table>
 
-  <h4> Term 2 (Winter)</h4>
-  <ol start="8">
-    <li>
-      Strings
-    </li>
-    <li>
-      Arrays
-    </li>
-    <li>
-      Implementing and Using Classes
-    </li>
-    <li>
-      <code>java.util.ArrayList</code>
-    </li>
-    <li>
-      Class Hierarchies and Interfaces
-    </li>
-  </ol>
-
-  <h4> Term 3 (Spring)</h4>
-  <ol start="13">
-    <li>
-      Algorithms and Recursion
-    </li>
-    <li>
-      Searching and Sorting
-    </li>
-  </ol>
-
-  <h2>Resources</h2>
+  <h4> Playoff leaders (as of 5/24/18)</h4>
+  <table id="playoffs">
+	<th>
+	  Name
+	</th>
+	<th>
+	  Team
+	</th>
+	<th>
+      Goals Against Average (GAA)
+    </th>
+    <th>
+      Save percentage
+    </th>
+    <th>
+      Record (GP-Wins-Losses)
+    </th>
+    <th>
+      Shoutouts
+    </th>
+  </table>
+	  
+  <h2>Sources</h2>
   <p>
-    The following resources can help with students with their learning in CSC500.
+    The following sources were used in making this website
   </p>
+  
   <ul>
     <li>
-      <a href="http://nhl.com/">NHL</a>: NHL
+      <a href="https://www.nhl.com">NHL</a>: Official website of the NHL
     </li>
     <li>
-      <a href="https://projecteuler.net/archives">Project Euler</a>: Challenging algorithmic problems
-    </li>
-    <li>
-      <a href="https://stackoverflow.com/">Stack Overflow</a>: Ask and read answers from virtually any programming question
-    </li>
-    <li>
-      <a href="https://www.youtube.com/channel/UCAeRcazf0rPbh9iWXpsLxyQ">My YouTube Channel</a>: will someday have more videos on it
-    </li>
-    <li>
-       <a href="http://www.oracle.com/technetwork/java/javase/downloads/jdk8-downloads-2133151.html">The Java Development Kit (JDK)</a>: needed to compile (and run) Java programs
-    </li>
-    <li>
-      <a href="https://atom.io/">Atom</a> or <a href="https://www.eclipse.org/downloads/">Eclipse</a> to create your code
-    </li>
+      <a href="http://www.nhl.com/stats/player?report=goaliesummary&reportType=season&seasonFrom=20172018&seasonTo=20172018&gameType=2&filter=gamesPlayed,gte,25&sort=wins">
+		  Goalie statistics</a>: Complete spreadsheet of goalie data 
+		  from the regular season and playoffs
+    </li>    
   </ul>
 
   <p>
-    Made with ❤ at Phillips Academy.
+    Made with ❤ at Phillips Academy by Mitchell Duerr.
   </p>
   <img src="https://enews.andover.edu/brand/images/content/andover-wordmark__2x.jpg"/>
 </body>
