--- a/final.html
+++ b/final.html
@@ -2,18 +2,11 @@
 <html>
 <head>
     <meta charset="utf-8" >
-    <title>CSC500 at Phillips Academy</title>
-    <link rel="stylesheet" type "text/css" href="styles.css">
+    <title>Top Ten NHL Goalies from the 2017-2018 season</title>
+    <link rel="stylesheet" type "text/css" href="style.css">
     <meta name="description" content="A sample HTML/CSS example website to demonstrate to students what they can build"/>
     <meta name="keywords" content="HTML/CSS, web development, webdev, example website, students" />
     <meta name="robots" content="index,follow" />
-    
-    <style>
-table, th, td {
-    border: 1px solid black;
-}
-</style>
-
 </head>
 
 <body>
@@ -26,9 +19,18 @@ table, th, td {
   </p>
   </div>
 
-  <div>
+  <div class="player">
   <h3>
     Number 10: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 9: (team) 
   </h3>
   <p>
     [blank explanation] <a href="https://www.nhl.com">Team website</a>
