--- a/final.html
+++ b/final.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" >
     <title>Top Ten NHL Goalies from the 2017-2018 season</title>
     <link rel="stylesheet" type "text/css" href="style.css">
-    <meta name="description" content="A sample HTML/CSS example website to demonstrate to students what they can build"/>
-    <meta name="keywords" content="HTML/CSS, web development, webdev, example website, students" />
+    <meta name="description" content="A ranking of the top ten goalies 
+    in the NHL in the 2017-2018 season"/>
+    <meta name="keywords" content="NHL, hockey, goalies, ranking"/>
     <meta name="robots" content="index,follow" />
 </head>
 
@@ -21,11 +22,22 @@
 
   <div class="player">
   <h3>
-    Number 10: (team) 
+    Number 10: Antti Raanta (ARI) 
   </h3>
   <p>
-    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+    Although Antti Raanta is a young and somewhat inexperienced goalie, 
+    he had an excelent season. Esspecially since he played for one of
+    the worst teams in the league. In addition to making some 
+    spectacular saves, he also boasts 3 shutouts and a 2.24 GAA, tied 
+    for second in the league.
   </p>
+  
+  <p>
+  <button id="arizona">
+	    <a href="https://www.nhl.com/coyotes">Arizona Coyotes website</a>
+  </button>
+  </p>
+
   </div>
   
   <div class="player">
@@ -36,67 +48,265 @@
     [blank explanation] <a href="https://www.nhl.com">Team website</a>
   </p>
   </div>
+  
+  <div class="player">
+  <h3>
+    Number 8: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 7: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 6: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 5: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 4: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 3: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 2: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
+  
+  <div class="player">
+  <h3>
+    Number 1: (team) 
+  </h3>
+  <p>
+    [blank explanation] <a href="https://www.nhl.com">Team website</a>
+  </p>
+  </div>
 
   <h2>Statistics Breakdown</h2>
   <p>
     Leaders are sorted by number of wins.
   </p>
-
+  
   <h4> Regular season leaders</h4>
     <table id="regular">
 	<tr>
-		<th>
-		  Name
-		</th>
-		<th>
-		  Team
-		</th>
-		<th>
-		  Goals Against Average (GAA)
-		</th>
-		<th>
-		  Save percentage
-		</th>
-		<th>
-		   Record (GP-Wins-Regulation Losses-OT Losses)
-		</th>
-		<th>
-		  Shoutouts
-		</th>
+		<th>Name</th>
+		<th>Team</th>
+		<th>Record (Wins-Regulation Losses-OT Losses)</th>
+		<th>Goals Against Average (GAA)</th>
+		<th>Save percentage</th>
+		<th>Shoutouts</th>
 	</tr>
 	<tr>
-		<td>
-			test
-		</td>
-		<td>
-			Bruins
-		</td>
-		<td>
-			10
-		</td>
+		<td>Connor Hellebuyck</td>
+		<td>Winnipeg</td>
+		<td>44-11-9</td>
+		<td>2.36</td>
+		<td>.924</td>
+		<td>6</td>
+	</tr>
+	<tr>
+		<td>Andrei Vasilevskiy</td>
+		<td>Tampa</td>
+		<td>44-17-3</td>
+		<td>2.62</td>
+		<td>.919</td>
+		<td>8</td>
+	</tr>
+	<tr>
+		<td>Pekka Rinne</td>
+		<td>Nashville</td>
+		<td>42-13-4</td>
+		<td>2.31</td>
+		<td>.927</td>
+		<td>8</td>
+	</tr>
+	<tr>
+		<td>Frederik Andersen</td>
+		<td>Toronto</td>
+		<td>38-21-5</td>
+		<td>2.81</td>
+		<td>.918</td>
+		<td>5</td>
+	</tr>
+	<tr>
+		<td>Sergei Bobrovsky</td>
+		<td>Colombus</td>
+		<td>37-22-6</td>
+		<td>2.42</td>
+		<td>.921</td>
+		<td>5</td>
+	</tr>
+	<tr>
+		<td>Devan Dubnyk</td>
+		<td>Minnesota</td>
+		<td>35-16-7</td>
+		<td>2.52</td>
+		<td>.918</td>
+		<td>5</td>
+	</tr>
+	<tr>
+		<td>Tuukka Rask</td>
+		<td>Boston</td>
+		<td>34-14-5</td>
+		<td>2.36</td>
+		<td>.917</td>
+		<td>3</td>
+	</tr>
+	<tr>
+		<td>Braden Holtby</td>
+		<td>Washington</td>
+		<td>34-16-4</td>
+		<td>2.99</td>
+		<td>.907</td>
+		<td>0</td>
+	</tr>
+	<tr>
+		<td>Jonathan Quick</td>
+		<td>Los Angeles</td>
+		<td>33-28-3</td>
+		<td>2.40</td>
+		<td>.921</td>
+		<td>5</td>
+	</tr>
+	<tr>
+		<td>John Gibson</td>
+		<td>Anaheim</td>
+		<td>31-18-7</td>
+		<td>2.43</td>
+		<td>.926</td>
+		<td>4</td>
 	</tr>
   </table>
 
   <h4> Playoff leaders (as of 5/24/18)</h4>
   <table id="playoffs">
-	<th>
-	  Name
-	</th>
-	<th>
-	  Team
-	</th>
-	<th>
-      Goals Against Average (GAA)
-    </th>
-    <th>
-      Save percentage
-    </th>
-    <th>
-      Record (GP-Wins-Losses)
-    </th>
-    <th>
-      Shoutouts
-    </th>
+	<th>Name</th>
+	<th>Team</th>
+	<th>Record (Wins-Losses)</th>
+	<th>Goals Against Average (GAA)</th>
+    <th>Save percentage</th>
+    <th>Shoutouts</th>
+    <tr>
+		<td>Marc-Andre Fleury</td>
+		<td>Las Vegas</td>
+		<td>12-3</td>
+		<td>1.68</td>
+		<td>.947</td>
+		<td>4</td>
+	</tr>
+    <tr>
+		<td>Braden Holtby</td>
+		<td>Washington</td>
+		<td>12-6</td>
+		<td>2.04</td>
+		<td>.923</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>Andrei Vasilevskiy</td>
+		<td>Tampa</td>
+		<td>11-6</td>
+		<td>2.58</td>
+		<td>.918</td>
+		<td>0</td>
+	</tr>
+	<tr>
+		<td>Connor Hellebuyck</td>
+		<td>Winnipeg</td>
+		<td>9-8</td>
+		<td>2.36</td>
+		<td>.922</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>Pekka Rinne</td>
+		<td>Nashville</td>
+		<td>7-6</td>
+		<td>3.07</td>
+		<td>.903</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>Martin Jones</td>
+		<td>San Jose</td>
+		<td>6-4</td>
+		<td>2.26</td>
+		<td>.928</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>Matt Murray</td>
+		<td>Pittsburg</td>
+		<td>6-6</td>
+		<td>2.43</td>
+		<td>.908</td>
+		<td>2</td>
+	</tr>
+	<tr>
+		<td>Tuukka Rask</td>
+		<td>Boston</td>
+		<td>5-7</td>
+		<td>2.88</td>
+		<td>.903</td>
+		<td>0</td>
+	</tr>
+	<tr>
+		<td>Frederik Andersen</td>
+		<td>Toronto</td>
+		<td>3-3</td>
+		<td>3.76</td>
+		<td>.896</td>
+		<td>0</td>
+	</tr>
+	<tr>
+		<td>Sergei Bobrovsky</td>
+		<td>Colombus</td>
+		<td>2-4</td>
+		<td>3.18</td>
+		<td>.900</td>
+		<td>0</td>
+	</tr>
+	
   </table>
 	  
   <h2>Sources</h2>
@@ -115,9 +325,9 @@
     </li>    
   </ul>
 
-  <p>
+  <p id="credit">
     Made with ❤ at Phillips Academy by Mitchell Duerr.
   </p>
-  <img src="https://enews.andover.edu/brand/images/content/andover-wordmark__2x.jpg"/>
+  <img id ="lastimg" src="https://enews.andover.edu/brand/images/content/andover-wordmark__2x.jpg"/>
 </body>
 </html>
