Added Vezina link

--- a/final.html
+++ b/final.html
@@ -619,6 +619,10 @@
 		  from the regular season and playoffs
     </li>
     <li>
+		<a href="https://www.nhl.com/news/connor-hellebuyck-pekka-rinne-andrei-vasilevskiy-named-vezina-trophy-finalists/c-298062362?tid=280503612" id="show">
+		Vezina trophy</a>: The Vezina Trophy finalists
+	</li>
+    <li>
 		<a href="https://www.w3schools.com/Css/" id="show">w3schools.com</a>:
 		A guide of how to use CSS
 	</li>
