--- a/final.html
+++ b/final.html
@@ -620,7 +620,7 @@
     </li>
     <li>
 		<a href="https://www.nhl.com/news/connor-hellebuyck-pekka-rinne-andrei-vasilevskiy-named-vezina-trophy-finalists/c-298062362?tid=280503612" id="show">
-		Vezina trophy</a>: The Vezina Trophy finalists
+		Vezina trophy</a>: The Vezina Trophy finalists for the 2017-2018 season
 	</li>
     <li>
 		<a href="https://www.w3schools.com/Css/" id="show">w3schools.com</a>:
