--- a/final.html
+++ b/final.html
@@ -41,7 +41,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -80,7 +80,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -118,7 +118,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -156,7 +156,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -196,7 +196,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -234,7 +234,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -274,7 +274,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -314,7 +314,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -357,7 +357,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -397,7 +397,7 @@
 				<th>Record (W-L-OTL)</th>
 				<th>Goals Against Average (GAA)</th>
 				<th>Save percentage</th>
-				<th>Shoutouts</th>
+				<th>Shutouts</th>
 			</tr>
 			<tr>
 				<td>2017-2018 regular season</td>
@@ -430,7 +430,7 @@
 		<th>Record (Wins-Regulation Losses-OT Losses)</th>
 		<th>Goals Against Average (GAA)</th>
 		<th>Save percentage</th>
-		<th>Shoutouts</th>
+		<th>Shutouts</th>
 	</tr>
 	<tr>
 		<td>Connor Hellebuyck</td>
@@ -521,7 +521,7 @@
 	<th>Record (Wins-Losses)</th>
 	<th>Goals Against Average (GAA)</th>
     <th>Save percentage</th>
-    <th>Shoutouts</th>
+    <th>Shutouts</th>
     <tr>
 		<td>Marc-Andre Fleury</td>
 		<td>Las Vegas</td>
